tests/snapshots/desugar_tests__ok_async_parallel.ctx.snap
---
source: tests/desugar_tests.rs
expression: json
---
{
  "rust_crates": [
    {
      "name": "tokio",
      "alias": null,
      "version": null,
      "features": []
    }
  ],
  "has_async": true,
  "has_parallel": false,
  "has_random": false,
  "has_rust_blocks": false,
  "has_logging": false,
  "has_config": false,
  "async_functions": [
    "fetch",
    "main"
  ]
}
