tests/snapshots/desugar_tests__ok_async_parallel_fire.ctx.snap
---
source: tests/desugar_tests.rs
expression: json
---
{
  "rust_crates": [
    [
      "tokio",
      null
    ]
  ],
  "has_async": true,
  "has_parallel": false,
  "has_random": false,
  "async_functions": [
    "fetch",
    "main"
  ]
}
