tests/snapshots/desugar_tests__ok_functions_oneliner.ctx.snap
---
source: tests/desugar_tests.rs
expression: json
---
{
  "rust_crates": [],
  "has_async": false,
  "has_parallel": false,
  "has_random": false,
  "has_rust_blocks": false,
  "has_logging": false,
  "has_config": false,
  "has_regex": false,
  "async_functions": []
}
