tests/snapshots/desugar_tests__ok_rust_crates.ctx.snap
---
source: tests/desugar_tests.rs
expression: json
---
{
  "rust_crates": [
    {
      "name": "serde",
      "alias": null,
      "version": null,
      "features": []
    },
    {
      "name": "tokio",
      "alias": null,
      "version": null,
      "features": []
    },
    {
      "name": "reqwest",
      "alias": null,
      "version": null,
      "features": []
    }
  ],
  "has_async": false,
  "has_parallel": false,
  "has_random": false,
  "has_rust_blocks": false,
  "has_logging": false,
  "has_config": false,
  "async_functions": []
}
