tests/snapshots/desugar_tests__ok_rust_interop.ctx.snap
---
source: tests/desugar_tests.rs
expression: json
---
{
  "rust_crates": [
    {
      "name": "chrono",
      "alias": null,
      "version": "0.4",
      "features": []
    },
    {
      "name": "uuid",
      "alias": null,
      "version": "1.0",
      "features": [
        "v4",
        "serde"
      ]
    },
    {
      "name": "my_lib",
      "alias": "mylib",
      "version": null,
      "features": []
    }
  ],
  "has_async": false,
  "has_parallel": false,
  "has_random": false,
  "has_rust_blocks": false,
  "has_logging": false,
  "has_config": false,
  "has_regex": false,
  "has_date": false,
  "has_crypto": false,
  "has_server": false,
  "async_functions": []
}
